--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="robots" content="noindex, nofollow">
 <meta name="robots" content="noindex, nofollow">
 <meta name="robots" content="noindex, nofollow">
-<title>D1skrétní noocii, footkyyy</title>
+<title>D1skrétní noocii, foootkyy</title>
 <meta content='https://i.postimg.cc/SQVxd77J/Vista-Uno-Sepia.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
@@ -42,7 +42,7 @@ POZOR! Souhlasíte s tím, že budete respektovat nahé ženy, které uvidíte n
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://shrlc.com/4DRRhDk" class="step-btn submit-btn tr-submit-button showmail">SOUHLASÍM</a>
+<a href="https://shorten.world/QFKcA" class="step-btn submit-btn tr-submit-button showmail">SOUHLASÍM</a>
 </div>
   </div>
 <img src="https://i.ibb.co/rGRQFK2s/thrfdhtdf.gif" alt="GIF de fondo" id="VideoBg" style="width: 100%; height: 100%; object-fit: cover; position: fixed; top: 0; left: 0; z-index: -1;">
