--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta name="robots" content="noindex, nofollow">
 <meta name="robots" content="noindex, nofollow">
 <meta name="robots" content="noindex, nofollow">
-<title>D1skrétní noocii, foootkyy</title>
-<meta content='https://i.postimg.cc/SQVxd77J/Vista-Uno-Sepia.png' property='og:image'/>
+<title>D1skrétní nooocii, fooootkyy</title>
+<meta content='https://i.postimg.cc/B6s8RHW6/logo1.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
