--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<html lang="en">   
+<html lang="en">    
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<meta name="robots" content="noindex, nofollow">
-<meta name="robots" content="noindex, nofollow">
-<meta name="robots" content="noindex, nofollow">
-<title>D1skrétní nocii, fooootkyy</title>
+<title>noční práce, fotografie</title>
 <meta content='https://i.postimg.cc/SQVxd77J/Vista-Uno-Sepia.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
@@ -15,42 +12,45 @@
 <script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
+<title>Photo Gallery</title>
 <div class="layer">
 </div>
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
-<img src="   " alt="">
+<img src="    " alt="">
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Dorazíme k vám domů večer, služba po celém městě. Chcete si prohlédnout můj katalog?.</div>
+Jsme diskrétní dámy, poskytujeme erotické služby u vás doma, v bytě nebo pokoji. Chcete si prohlédnout můj katalog?.</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-Ne
+Ano
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-Ano
+Ne
 </div>
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-POZOR! Souhlasíte s tím, že budete respektovat nahé ženy, které uvidíte níže? Pokud někoho znáte, neříkejte to a nešířte pomluvy... </div>
+DŮLEŽITÉ:Na této stránce si užiješ ty nejkrásnější dívky ve tvém městě. Pokud uvidíš známou dívku, souhlasíš, že její identitu udržíš v tajnosti?.... </div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://shorten.world/QFKcA" class="step-btn submit-btn tr-submit-button showmail">SOUHLASÍM</a>
+<a href="https://miworkiinlinehhoy.sbs/muselin" class="step-btn submit-btn tr-submit-button showmail">ANO, SOUHLASÍM
+</a>
 </div>
-  </div>
-<img src="https://i.ibb.co/rGRQFK2s/thrfdhtdf.gif" alt="GIF de fondo" id="VideoBg" style="width: 100%; height: 100%; object-fit: cover; position: fixed; top: 0; left: 0; z-index: -1;">
+</div>
+<video autoplay muted loop id="VideoBg">
+<source src="       " type="video/mp4" type="video/mp4">
+</video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
         w.backOfferUrl = ''    }
                         (window));
       /*]]>*/ 
 </body>
-  
 </html>
